src/test/06-Errors/error-auto-null1.txt
error-auto-null1.ck:2:10: error: cannot infer 'auto' type from '@null' type
[2] null @=> auto foo;
             ^
